Added CSS structure, some HTML divs and further improved on error handling messages

--- a/style.css
+++ b/style.css
@@ -1,11 +1,25 @@
+body{
+    width: 1200px;
+    margin: auto;
+}
 table{
+    padding-top: 5em;
     width: 350px;
     border: 1px;
+}
+table p{
+    margin: 0;
+    white-space: nowrap;
 }
 th{
     align-content: inherit;
     background-color: antiquewhite;
     border-bottom: 1px solid black;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+}
+tr{
+    
 }
 footer{
     background-color: #c9c7c7;
@@ -19,6 +33,9 @@ footer{
     margin: auto;
     width: 50%;
     padding: 10px;
+}
+#topMenu{
+    padding: 2em;
 }
 #centerTable{
     margin: auto;
