--- a/style.css
+++ b/style.css
@@ -1,51 +1,110 @@
-body{
-    width: 1200px;
-    margin: auto;
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
-table{
-    padding-top: 5em;
-    width: 350px;
-    border: 1px;
+
+html {
+  height: -webkit-fill-available;
 }
-table p{
-    margin: 0;
-    white-space: nowrap;
+
+main {
+  height: 100vh;
+  height: -webkit-fill-available;
+  max-height: 100vh;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
-th{
-    align-content: inherit;
-    background-color: antiquewhite;
-    border-bottom: 1px solid black;
-    border-top-left-radius: 1em;
-    border-top-right-radius: 1em;
+
+.dropdown-toggle { outline: 0; }
+
+.btn-toggle {
+  padding: .25rem .5rem;
+  font-weight: 600;
+  color: rgba(0, 0, 0, .65);
+  background-color: transparent;
 }
-footer{
-    background-color: #c9c7c7;
-    padding: 2em;
-    margin: auto;
-    margin-top: 2em;
-    width: 50%;
-    border-radius: 2em;
+.btn-toggle:hover,
+.btn-toggle:focus {
+  color: rgba(0, 0, 0, .85);
+  background-color: #d2f4ea;
 }
-.center{
-    margin: auto;
-    width: 50%;
-    padding: 10px;
+
+.btn-toggle::before {
+  width: 1.25em;
+  line-height: 0;
+  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+  transition: transform .35s ease;
+  transform-origin: .5em 50%;
 }
-#topMenu{
-    padding: 2em;
+
+.btn-toggle[aria-expanded="true"] {
+  color: rgba(0, 0, 0, .85);
 }
-#centerTable{
-    margin: auto;
-    width: 50%;
-    height: 600px;
-    border: 3px solid green;
-    border-radius: 1em;
-    padding: 10px;
-    background-color: #F8F8F8;
+.btn-toggle[aria-expanded="true"]::before {
+  transform: rotate(90deg);
 }
-#result{
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-    background-color: #F8F8F8;
+
+.btn-toggle-nav a {
+  padding: .1875rem .5rem;
+  margin-top: .125rem;
+  margin-left: 1.25rem;
+}
+.btn-toggle-nav a:hover,
+.btn-toggle-nav a:focus {
+  background-color: #d2f4ea;
+}
+
+.scrollarea {
+  overflow-y: auto;
+}
+/*bootstrap specific*/
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
+
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
+}
+
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
 }
